# Gpu_project

./: CMakeLists.txt  README.md  pyproject.toml  setup.py  test.py
include/core/: cudaException.hh  ops.hh  tensor.hh
include/cuda/: ops.cuh
notebooks/: example.ipynb  test.ipynb
src/bindings/: btensor.cpp
src/core/: ops.cpp  tensor.cpp
src/cuda/: ops.cu
tests/: test_tensor.py
